--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Fábulas</h1>
 <ul>
-    <li>O leão e o rarinho</li>
+    <li><a href="leao.html">O leão e o ratinho</a></li>
     <li>O lobo e a cabra</li>
     <li>A raposa e a uvas</li>
 </ul>
