--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Fábulas</h1>
 <ul>
     <li><a href="leao.html">O leão e o ratinho</a></li>
-    <li>O lobo e a cabra</li>
-    <li>A raposa e a uvas</li>
+    <li><a href="lobo.html">O lobo e a cabra</a></li>
+    <li><a href="raposa.html">A raposa e a uvas</a></li>
 </ul>
 </body>
 </html>
