--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas fabulas</title>
-    <style></style>
+    <style>
+        h1{
+           ul 
+        }
+    </style>
 </head>
 <body>
     <h1>Fábulas</h1>
