--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Minhas fabulas</title>
     <style>
         h1{
-           ul 
+           text-align: center;
+           background-color: rgb(240, 240, 176);
+           line-height: 1.5;
+        }
+
+        ul{
+            list-style: none;
+            
         }
     </style>
 </head>
