--- a/lobo.html
+++ b/lobo.html
@@ -19,6 +19,7 @@
     <p>Moral: Cuidado quando um inimigo dá um conselho amigo.</p>
 
 <p><a href="index.html">voltar</a></p>
+<img src="lobo.jpg" alt="xxxxxxxxxxxxxxxxx">
 
 </body>
 </html>
