--- a/leao.html
+++ b/leao.html
@@ -19,6 +19,7 @@
     <p>Não conseguindo se soltar, fazia a floresta inteira tremer com seus urros de raiva. Nisso apareceu o ratinho, e
         com seus dentes afiados roeu as cordas e soltou o leão. </p>
         <p><a href="index.html">voltar</a></p>
+        <img src="leao.webp" alt="xxxxxxxxxxxxxxxxx">
 
 </body>
 </html>
