--- a/raposa.html
+++ b/raposa.html
@@ -15,5 +15,6 @@
     </p>
     <p>Moral da história: Desprezar o que não se consegue conquistar é fácil.</p>
     <p><a href="index.html">voltar</a></p>
+    <img src="raposa.webp" alt="xxxxxxxxxxxxxxxxx">
 </body>
 </html>
