--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             list-style: none;
             
         }
+
+        a{
+            text-align: center;
+            text-decoration: none;
+            color: yellow;
+        }
     </style>
 </head>
 <body>
