--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas fabulas</title>
     <style>
+        body{
+            background-color: black;
+        }
         h1{
            text-align: center;
            background-color: rgb(204, 204, 49);
