--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             text-align: center;
             text-decoration: none;
             color: yellow;
+            font-size: 25px;
         }
     </style>
 </head>
