--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <h1>Fábulas</h1>
 <ul>
-    <li><a href="leao.html">O leão e o ratinho</a></li>
+    <li><a href="leao.html">O leão e o ratinho</a>  <img src="leao.webp" alt=""></li>
     <li><a href="lobo.html">O lobo e a cabra</a></li>
     <li><a href="raposa.html">A raposa e a uvas</a></li>
 </ul>
