--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             color: yellow;
             font-size: 25px;
         }
+
+        img{
+            width: 250px;
+        }
     </style>
 </head>
 <body>
