--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <h1>Fábulas</h1>
 <ul>
-    <li><a href="leao.html">O leão e o ratinho</a>  <img src="leao.webp" alt=""></li>
+    <li><a href="leao.html">O leão e o ratinho <img src="leao.webp" alt=""> </a>  </li>
     <li><a href="lobo.html">O lobo e a cabra</a> <img src="lobo.jpg" alt=""></li>
     <li><a href="raposa.html">A raposa e a uvas</a> <img src="raposa.webp" alt=""></li>
 </ul>
